# ai-for-developers-project-386

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
server/: .gitignore
server/src/: pyproject.toml
server/src/backend/domain/: base.py  declarations.py
server/src/backend/domain/exc/: __init__.py  base.py
server/src/backend/domain/models/: __init__.py  booking.py  event_type.py  meeting_platform.py  owner.py  schedule.py
server/src/tests/unit/domain/availability_override/: test_add_period.py  test_date.py
server/src/tests/unit/domain/availability_rule/: test_add_period.py  test_weekday.py
server/src/tests/unit/domain/booking/: conftest.py  test_guest.py  test_time_constraints.py  test_url.py
server/src/tests/unit/domain/schedule/: conftest.py  test_availability.py  test_booking_in_future.py  test_event_type.py  test_no_overlap.py
server/src/tests/unit/domain/time_range/: test_duration_multiple.py  test_order.py
typespec/: main.tsp  package-lock.json  package.json
typespec/models/: booking.tsp  common.tsp  event_type.tsp  meeting_platform.tsp  owner.tsp  schedule.tsp
typespec/routes/: event_types.tsp  meeting_platforms.tsp  owners.tsp  schedules.tsp
ui/: .gitignore  eslint.config.js  package-lock.json  package.json  stats.html  tsconfig.app.json  tsconfig.jest.json  tsconfig.node.json  vite.config.ts
ui/config/jest/: jest.config.ts
ui/src/: main.tsx
ui/src/__mocks__/: api.ts  apiConfig.ts
ui/src/app/: App.tsx
ui/src/app/layouts/: AppLayout.module.css  AppLayout.tsx
ui/src/app/providers/StoreProvider/: index.ts
ui/src/app/providers/StoreProvider/config/: RootStore.ts  RootStoreContext.ts
ui/src/app/providers/StoreProvider/ui/: StoreProvider.tsx
ui/src/app/providers/router/routeConfig/: routeConfig.tsx
ui/src/app/providers/router/ui/: AppRouter.tsx
ui/src/app/styles/: index.css  reset.css  variables.css
ui/src/entities/Booking/api/: bookingApi.ts
ui/src/entities/Booking/model/stores/: BookingStore.ts
ui/src/entities/Booking/model/types/: types.ts
ui/src/entities/EventType/: index.ts
ui/src/entities/EventType/api/: eventTypeApi.ts
ui/src/entities/EventType/model/stores/: EventTypeStore.test.ts  EventTypeStore.ts
ui/src/entities/EventType/model/types/: types.ts
ui/src/entities/EventType/ui/: EventTypeCard.module.css  EventTypeCard.tsx
ui/src/entities/MeetingPlatform/: index.ts
ui/src/entities/MeetingPlatform/api/: meetingPlatformApi.ts
ui/src/entities/MeetingPlatform/model/stores/: MeetingPlatformStore.ts
ui/src/entities/Owner/api/: ownerApi.ts
ui/src/entities/Owner/model/stores/: OwnerStore.ts
ui/src/entities/Owner/model/types/: types.ts
ui/src/entities/Schedule/: index.ts
ui/src/entities/Schedule/api/: scheduleApi.ts
ui/src/entities/Schedule/model/stores/: ScheduleStore.ts
ui/src/entities/Schedule/model/types/: types.ts
ui/src/entities/booking/: index.ts
ui/src/entities/eventType/api/: eventTypeApi.ts
ui/src/entities/meetingPlatform/model/stores/: MeetingPlatformStore.ts
ui/src/entities/owner/: index.ts
ui/src/features/EventTypeForm/: index.ts
ui/src/features/EventTypeForm/ui/: EventTypeForm.tsx  EventTypeFormModal.tsx
ui/src/pages/AvailabilityPage/: index.ts
ui/src/pages/AvailabilityPage/ui/: AvailabilityPage.tsx
ui/src/pages/BookingPage/: index.tsx
ui/src/pages/BookingPage/ui/: BookingPage.tsx
ui/src/pages/EventTypesPage/: index.ts  index.tsx
ui/src/pages/EventTypesPage/ui/: EventTypesPage.module.css  EventTypesPage.tsx
ui/src/pages/NotFoundPage/ui/: NotFoundPage.tsx
ui/src/shared/api/: api.ts  types.generated.ts
ui/src/shared/api/config/: apiConfig.ts
ui/src/shared/config/: env.ts
(+2 files in other folders)
