[project]
name = "CallCalendar-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "zuban>=0.8.0",
]


[tool.zuban]
strict = true
disallow_untyped_defs = true
warn_unreachable = true
allow_untyped_globals = false
check_untyped_defs = false
follow_untyped_imports = true
exclude_gitignore = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
verboseOutput = true
extraPaths = ["src", "root", "project_root", "AI-recruitment-back"]
exclude = [".venv", "**/.venv/**", "**/temp", "**/tmp", "temp", "./temp"]

[tool.pytest.ini_options]
pythonpath = "backend"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test", "*_test.py", "*_tests.py", "test_*.py"]


[tool.coverage.run]
omit = [
    "*/temp/*",
    "*/tmp/*",
    "*/tests/*",
    "*/test*",
    "**/test_*.py",
    "**/__init__.py",
    "**/*dishka_factory*",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".idea",
    "temp",
    "../temp",
    ".coverage",
    ".env",
    "cov_html",
]

# extend-exclude = ["./tests/", "**/tests/", "tests", "**/test_*.py"]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.14
target-version = "py314"

# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    'ASYNC109',
    'CPY',
    'D',
    'DOC',
    'FBT001',
    'FBT002',
    'FIX',
    'INP001',
    'N815',
    'PLR0913',
    'PLR0917',
    'PLW3201',
    'RUF001',
    'RUF002',
    'RUF003',
    'S101',
    'TC001',
    'TC002',
    'TC003',
    'TD002',
    'TD003',
    'TID252',
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["COM", "F401", "FA102", "I", "UP007", "RUF022", "W292"]
unfixable = ["B", "RUF001"]

logger-objects = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.flake8-bandit]
hardcoded-tmp-directory = ["/tmp", "/temp", "../temp", "../tmp"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
relative-imports-order = "closest-to-furthest"
no-lines-before = []
lines-after-imports = 2
lines-between-types = 1
known-first-party = ["src", "infrastructure", "domain", "core", "service_layer"]
